fixed layout bug

--- a/src/components/elements/CardFeatured/cardFeatured.module.scss
+++ b/src/components/elements/CardFeatured/cardFeatured.module.scss
@@ -2,7 +2,6 @@
 
 .card {
   max-width: 357px;
-  max-height: 463px;
 
   @include setTextStyle($font-bold, 22px, 120%);
 
